refactored rightColumn components

--- a/client/main.css
+++ b/client/main.css
@@ -29,3 +29,10 @@ div.rightColumn {
     display: inline-block;
     text-align: left;
 }
+
+.star {
+    height: 100px;
+    width: 20px;
+    border: 1px solid red;
+
+}
