added star rating on the main review parts

--- a/client/main.css
+++ b/client/main.css
@@ -30,9 +30,41 @@ div.rightColumn {
     text-align: left;
 }
 
-.star {
-    height: 100px;
-    width: 20px;
-    border: 1px solid red;
-
+.star-ratings-css-top {
+    position: absolute;
+    width: 80px;
+    overflow: hidden;
+    color: black;
+    display: block;
 }
+.star-ratings-css-bottom {
+    color: lightgray;
+    display: block;
+}
+
+/* .star-ratings-css {
+    unicode-bidi: bidi-override;
+    color: #c5c5c5;
+    font-size: 25px;
+    height: 25px;
+    width: 100px;
+    margin: 0 auto;
+    position: relative;
+    padding: 0;
+
+    &-top {
+      color: black;
+      padding: 0;
+      position: absolute;
+      z-index: 1;
+      display: block;
+      top: 0;
+      left: 0;
+      overflow: hidden;
+    }
+    &-bottom {
+      padding: 0;
+      display: block;
+      z-index: 0;
+    }
+  } */
