--- a/client/main.css
+++ b/client/main.css
@@ -1,8 +1,13 @@
-div {
+.nerdstromReviewPage {
     border: 1px solid black;
     font-family: 'Brandon Text';
     font-weight: normal;
     line-height: 1.4;
+}
+
+div.mainReviews {
+    display: block;
+    border: 1px solid red;
 }
 
 div.review {
@@ -13,17 +18,13 @@ div.review {
     border: 1px solid blue;
 }
 
-div.mainReviews {
-    display: block;
-    border: 1px solid red;
-}
-
 div.leftColumn {
     display: inline-block;
     white-space: normal;
     width: 42%;
     padding-right: 90px;
 }
+
 div.rightColumn {
     vertical-align: top;
     display: inline-block;
@@ -37,34 +38,8 @@ div.rightColumn {
     color: black;
     display: block;
 }
+
 .star-ratings-css-bottom {
     color: lightgray;
     display: block;
 }
-
-/* .star-ratings-css {
-    unicode-bidi: bidi-override;
-    color: #c5c5c5;
-    font-size: 25px;
-    height: 25px;
-    width: 100px;
-    margin: 0 auto;
-    position: relative;
-    padding: 0;
-
-    &-top {
-      color: black;
-      padding: 0;
-      position: absolute;
-      z-index: 1;
-      display: block;
-      top: 0;
-      left: 0;
-      overflow: hidden;
-    }
-    &-bottom {
-      padding: 0;
-      display: block;
-      z-index: 0;
-    }
-  } */
