added sorby component

--- a/client/main.css
+++ b/client/main.css
@@ -5,6 +5,21 @@
     line-height: 1.4;
 }
 
+table {
+    background-color: yellow;
+}
+.sortBy {
+    vertical-align: top;
+    border: 1px solid red;
+
+}
+
+.sortByStar{
+    vertical-align: top;
+    width: 396px;
+    border: 1px solid red;
+}
+
 div.mainReviews {
     display: block;
     border: 1px solid red;
