--- a/client/main.css
+++ b/client/main.css
@@ -11,13 +11,26 @@ table {
 .sortBy {
     vertical-align: top;
     border: 1px solid red;
-
 }
 
 .sortByStar{
     vertical-align: top;
     width: 396px;
+    border: 1px solid blue;
+}
+
+ul {
+    list-style-type: none;
+}
+
+.options{
     border: 1px solid red;
+    position: absolute;
+    width: 396px;
+    background-color: white;
+    z-index: 1;
+    padding: 0px;
+    margin-top: 0px;
 }
 
 div.mainReviews {
