--- a/client/main.css
+++ b/client/main.css
@@ -9,24 +9,21 @@
     padding-bottom: 10px;
 }
 
+.summaryTitle {
+    margin-left: 10px;
+    margin-top: 10px;
+    margin-bottom: 5px;
+}
 .summaryStar {
     display: inline-block;
     border: 1px solid black;
     vertical-align: top;
-    width: 300px;
-    
-}
-
-.star-ratings-summary {
-    display: inline-block;
-    width: 180px;
-    vertical-align: bottom;
+    margin-left: 10px;
 
 }
-
 
 .star-ratings-summary-top{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     position: absolute;
     overflow: hidden;
     display: block;
@@ -38,7 +35,7 @@
     overflow: hidden;
 }
 .star-ratings-summary-bottom{
-    border: 1px solid blue;
+    /* border: 1px solid blue; */
     overflow: hidden; 
     display: inline-block;
     width: 120px;
@@ -54,22 +51,35 @@
 }
 
 .reviewCount {
-    border: 1px solid blue;
-    vertical-align: middle;
+    vertical-align: top; 
     display: inline-block;
+    padding-left: 5px;
+    padding-top: 2px;
+
 }
 
 .summaryRating {
     display: inline-block;
     border: 1px solid black;
     vertical-align: top;
+    margin-left: 20px;
+    margin-right: 20px;
+
 }
 
 .writeReview {
     display: inline-block;
     border: 1px solid black;
     vertical-align: top;
+    /* text-align: center; */
+    width: 220px;
+    height: 40px;
+}
 
+.writeReview span {
+    position: relative;
+    top: 25%;
+    left: 25%;
 }
 
 
@@ -91,7 +101,6 @@
 .sortByStar{
     vertical-align: top;
     width: 396px;
-    /* border: 1px solid blue; */
 }
 
 
