--- a/client/main.css
+++ b/client/main.css
@@ -1,29 +1,38 @@
+
+/* Review module */
+
 .nerdstromReviewPage {
     border: 1px solid black;
     font-family: 'Brandon Text';
     font-weight: normal;
     line-height: 1.4;
+    width: 100%;
 }
 
+/* Review Summary Component */
+
 .reviewSummary {
+    border-bottom: 1px solid lightgray;
     padding-bottom: 10px;
+    width: 100%;
+    height: 20%;
 }
 
 .summaryTitle {
-    margin-left: 10px;
     margin-top: 10px;
-    margin-bottom: 5px;
+    margin-bottom: 20px;  
+    font-size: 20px;  
 }
-.summaryStar {
-    display: inline-block;
-    border: 1px solid black;
-    vertical-align: top;
-    margin-left: 10px;
 
+.summaryStar {
+    /* border: 1px solid red; */
+    display: inline-block;
+    vertical-align: top;
+    /* margin-left: 10px; */
+    width: 28%;
 }
 
 .star-ratings-summary-top{
-    /* border: 1px solid red; */
     position: absolute;
     overflow: hidden;
     display: block;
@@ -34,8 +43,8 @@
     position: absolute;
     overflow: hidden;
 }
+
 .star-ratings-summary-bottom{
-    /* border: 1px solid blue; */
     overflow: hidden; 
     display: inline-block;
     width: 120px;
@@ -55,72 +64,130 @@
     display: inline-block;
     padding-left: 5px;
     padding-top: 2px;
-
 }
 
 .summaryRating {
     display: inline-block;
-    border: 1px solid black;
     vertical-align: top;
     margin-left: 20px;
     margin-right: 20px;
-
+    width: 33%;
+    /* border: 1px solid green; */
 }
 
 .writeReview {
     display: inline-block;
     border: 1px solid black;
+    width: 33%;
+    /* float: right; */
+}
+
+.writeReview:hover {
+    border: 1px solid white;
+    background-color: lightgray;
+}
+
+.writeReview div {
+    margin: 15px;
+    text-align: center;
+}
+
+/* Review Sorting Component */
+
+.sorting {
+    border-bottom: 1px solid lightgray;
+    margin-bottom: 5px;
+    width: 100%;
+    /* height: 20%; */
+}
+
+.sortByStar {
     vertical-align: top;
-    /* text-align: center; */
-    width: 220px;
-    height: 40px;
-}
-
-.writeReview span {
-    position: relative;
-    top: 25%;
-    left: 25%;
-}
-
-
-.sortBy {
-    vertical-align: top;
-    width: 220px;
-    border: 1px solid black;
-}
-
-.optionForSortBy {
-    border: 1px solid red;
-    position: absolute;
-    width: 220px;
-    background-color: white;
-    z-index: 1;
-    padding: 0px;
-    margin-top: 0px;
-}
-.sortByStar{
-    vertical-align: top;
+    padding-left: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     width: 396px;
 }
 
-
 .sortStar-before {
     border-top: 2px solid gray;
-    text-align: center;
+    text-align: left;
     width: 110px;
+    padding-left: 3px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    cursor: pointer;
+
 }
 .sortStar-after {
-    border: 1px solid gray;
-    text-align: center;
+    border: 1px solid lightgray;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 3px;
+    text-align: left;
     width: 110px;
+    cursor: pointer;
+
 }
 
 ul {
     list-style-type: none;
+    /* border-bottom: 1px solid lightgray; */
 }
 
+li {
+    border-bottom: 1px solid lightgray;
+    border-right: 1px solid lightgray;
+    border-left: 1px solid lightgray;
+    /* border: 1px solid lightgray; */
+    background-color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 3px;
+    z-index: 10;
+    width: 110px;
+    cursor: pointer;
+}
+
+li:hover {
+    border-bottom: 2px solid lightgray;
+}
+
+.sortByMain {
+    vertical-align: top;
+    float: right;
+    padding-top: 20px;
+    padding-right: 0px;
+    padding-bottom: 20px;
+
+}
+
+.sortBy {
+    text-align: left;
+    width: 220px;
+    border: 1px solid lightgray;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 3px;
+    padding-right: 0px;
+    cursor: pointer;
+}
+
+.optionForSortBy li {
+    width: 220px;
+}
+
+.optionForSortBy {
+    position: absolute;
+    width: 220px;
+    background-color: white;
+    z-index: 1;
+    padding: 0px;
+    margin-top: 0px;
+}
+
+
 .options{
-    border: 1px solid red;
     position: absolute;
     width: 110px;
     background-color: white;
@@ -129,14 +196,18 @@ ul {
     margin-top: 0px;
 }
 
-div.mainReviews {
-    display: block;
-    border: 1px solid red;
+
+/* Main Review Component */
+.reviews {
+    /* width: 620px; */
 }
+/* div.mainReviews {
+    display: block;
+} */
 
 div.review {
-    /* height: auto; */
     display: block;
+    /* position: relative; */
     padding: 10px 10px 10px 10px; 
     margin-top: 68px;
     border: 1px solid blue;
