--- a/client/main.css
+++ b/client/main.css
@@ -167,12 +167,32 @@ li:hover {
 /* Main Review Component */
 
 
-div.review {
+.review {
     display: block;
-    /* position: relative; */
-    padding: 10px 10px 10px 10px; 
-    margin-top: 68px;
-    border: 1px solid blue;
+    padding-top: 40px; 
+    padding-bottom: 40px; 
+    border-bottom: 1px solid lightgray;
+}
+
+.reviewTitle{
+    padding-top: 10px;
+}
+
+.description {
+    padding-top: 18px;
+    padding-bottom: 18px;
+}
+
+.ratings {
+    padding-top: 10px;
+}
+
+.ratings div {
+    padding-bottom: 5px;
+}
+
+.ratings strong {
+    padding-right: 5px;
 }
 
 div.leftColumn {
@@ -200,6 +220,7 @@ div.rightColumn {
     color: lightgray;
     display: block;
 }
+
 
 /* page selector */
 .pageSelectorBody {
