--- a/client/main.css
+++ b/client/main.css
@@ -12,7 +12,7 @@
 /* Review Summary Component */
 
 .reviewSummary {
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid #e3e3e3;
     padding-bottom: 10px;
     width: 100%;
     height: 20%;
@@ -59,7 +59,7 @@
 
 .writeReview:hover {
     border: 1px solid white;
-    background-color: lightgray;
+    background-color: #e3e3e3;
     cursor: pointer;
 }
 
@@ -74,7 +74,7 @@
 /* Review Sorting Component */
 
 .sorting {
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid #e3e3e3;
     width: 100%;
 }
 
@@ -95,7 +95,7 @@
 
 }
 .sortStar-after {
-    border: 1px solid lightgray;
+    border: 1px solid #e3e3e3;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 3px;
@@ -109,10 +109,10 @@ ul {
 }
 
 li {
-    border-bottom: 1px solid lightgray;
-    border-right: 1px solid lightgray;
-    border-left: 1px solid lightgray;
-    /* border: 1px solid lightgray; */
+    border-bottom: 1px solid #e3e3e3;
+    border-right: 1px solid #e3e3e3;
+    border-left: 1px solid #e3e3e3;
+    /* border: 1px solid #e3e3e3; */
     background-color: white;
     padding-top: 5px;
     padding-bottom: 5px;
@@ -123,7 +123,7 @@ li {
 }
 
 li:hover {
-    border-bottom: 2px solid lightgray;
+    border-bottom: 2px solid #e3e3e3;
 }
 
 .sortByMain {
@@ -136,7 +136,7 @@ li:hover {
 .sortBy {
     text-align: left;
     width: 220px;
-    border: 1px solid lightgray;
+    border: 1px solid #e3e3e3;
     padding-top: 5px;
     padding-bottom: 5px;
     padding-left: 3px;
@@ -175,7 +175,7 @@ li:hover {
     display: block;
     padding-top: 40px; 
     padding-bottom: 40px; 
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid #e3e3e3;
 }
 
 .reviewTitle{
@@ -221,7 +221,7 @@ div.rightColumn {
 }
 
 .star-ratings-css-bottom {
-    color: lightgray;
+    color: #e3e3e3;
     display: block;
 }
 
@@ -230,8 +230,10 @@ div.rightColumn {
 .pageSelectorBody {
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: space-between;
-    border: 1px solid red; 
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 .selectNum {
@@ -240,13 +242,26 @@ div.rightColumn {
     justify-content: space-evenly;
 }
 
-.selectNum span {
-    margin-top: 1%;
-    margin-bottom: 1%;
-}
-
 path {
     stroke: black;
+}
+
+.previous {
+    display: flex;
+    align-items: center;
+}
+
+.previous span {
+    margin-left: 10px;
+}
+
+.next{
+    display: flex;
+    align-items: center;
+}
+
+.next span {
+    margin-right: 10px;
 }
 
 .previous:hover {
