updated styles for all components

--- a/client/main.css
+++ b/client/main.css
@@ -2,7 +2,7 @@
 /* Review module */
 
 .nerdstromReviewPage {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     font-family: Lato;
     font-weight: normal;
     line-height: 1.2;
@@ -76,6 +76,7 @@
 .sorting {
     border-bottom: 1px solid #e3e3e3;
     width: 100%;
+    font-size: 90%;
 }
 
 .sortByStar {
@@ -92,6 +93,8 @@
     padding-top: 5px;
     padding-bottom: 5px;
     cursor: pointer;
+    display: flex;
+    justify-content: space-between;
 
 }
 .sortStar-after {
@@ -102,6 +105,12 @@
     text-align: left;
     width: 110px;
     cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+}
+
+.smallArrow {
+    padding-right: 5px;
 }
 
 ul {
@@ -142,6 +151,8 @@ li:hover {
     padding-left: 3px;
     padding-right: 0px;
     cursor: pointer;
+    display: flex;
+    justify-content: space-between;
 }
 
 .optionForSortBy li {
@@ -185,10 +196,12 @@ li:hover {
 .description {
     padding-top: 18px;
     padding-bottom: 18px;
+    font-size:90%;
 }
 
 .ratings {
     padding-top: 10px;
+    font-size: 90%;
 }
 
 .ratings div {
@@ -202,7 +215,7 @@ li:hover {
 div.leftColumn {
     display: inline-block;
     white-space: normal;
-    width: 42%;
+    width: 60%;
     padding-right: 90px;
 }
 
@@ -210,6 +223,7 @@ div.rightColumn {
     vertical-align: top;
     display: inline-block;
     text-align: left;
+    font-size: 90%;
 }
 
 .star-ratings-css-top {
@@ -234,6 +248,7 @@ div.rightColumn {
     justify-content: space-between;
     padding-top: 15px;
     padding-bottom: 15px;
+    border-bottom: 1px solid #e3e3e3;
 }
 
 .selectNum {
@@ -243,7 +258,7 @@ div.rightColumn {
 }
 
 path {
-    stroke: black;
+    stroke: #737373;
 }
 
 .previous {
