change font size for reviewer's name

--- a/client/main.css
+++ b/client/main.css
@@ -71,6 +71,10 @@
     text-align: center;
 }
 
+:local(.reviewerInfo) {
+    font-size: 90%;
+}
+
 /* Review Sorting Component */
 
 :local(.sorting) {
